foundation-objs/main/default/objects/Account/fields/Account_Owner_Cimplifive__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Cimplifive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cimplifive Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Owner_Cimplifive</relationshipName>
    <type>Lookup</type>
</CustomField>