foundation-objs/main/default/objects/Account/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No assets-No opportunities(NAL)</fullName>
            </value>
            <value>
                <fullName>No assets - Closed opportunities(NAL-lost)</fullName>
            </value>
            <value>
                <fullName>No assets - Open opportunities(NAL-actively pitching)</fullName>
            </value>
            <value>
                <fullName>Active Assets-Closed / No opportunities(Existing cx)</fullName>
                <label>Active Assets - Closed / No opportunities(Existing cx)</label>
            </value>
            <value>
                <fullName>Active Assets - Open opportunities(Existing cx-cross-sell)</fullName>
            </value>
            <value>
                <fullName>Non Active Assets - Closed / No opportunities(Old cx)</fullName>
            </value>
            <value>
                <fullName>Non Active Assets - Open opportunities(winback)</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>