foundation-objs/main/default/objects/Account/fields/Agreement_Sign_Method__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Sign_Method__c</fullName>
    <label>Agreement Sign Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E-Sign</fullName>
                <default>true</default>
                <label>E-Sign</label>
            </value>
            <value>
                <fullName>Physical Sign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>