foundation-objs/main/default/objects/Account/fields/CC__c.field-meta.xml
<CustomField>
    <fullName>CC__c</fullName>
    <label>Esign CC Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>