foundation-objs/main/default/objects/Account/fields/Collection_Manager__c.field-meta.xml
<CustomField>
    <fullName>Collection_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collection Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Collection_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>