foundation-objs/main/default/objects/Account/fields/Commission_New_Sales__c.field-meta.xml
<CustomField>
    <fullName>Commission_New_Sales__c</fullName>
    <label>Commission% New Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>