foundation-objs/main/default/objects/Account/fields/Commission_Performance_Incentive__c.field-meta.xml
<CustomField>
    <fullName>Commission_Performance_Incentive__c</fullName>
    <label>Commission% Performance Incentive</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>