foundation-objs/main/default/objects/Account/fields/Consumed_Products__c.field-meta.xml
<CustomField>
    <fullName>Consumed_Products__c</fullName>
    <label>Consumed Products</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>