foundation-objs/main/default/objects/Account/fields/Direct_deal_by_Channel_team__c.field-meta.xml
<CustomField>
    <fullName>Direct_deal_by_Channel_team__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Direct deal by Channel team</label>
    <type>Checkbox</type>
</CustomField>