foundation-objs/main/default/objects/Account/fields/E_Sign_Type__c.field-meta.xml
<CustomField>
    <fullName>E_Sign_Type__c</fullName>
    <label>E-Sign Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>aadhaar</fullName>
            </value>
            <value>
                <fullName>electronic</fullName>
                <default>true</default>
                <label>electronic</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>