foundation-objs/main/default/objects/Account/fields/ESign_BE_Docket_ID__c.field-meta.xml
<CustomField>
    <fullName>ESign_BE_Docket_ID__c</fullName>
    <label>ESign BE Docket ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>