foundation-objs/main/default/objects/Account/fields/Esign_Order__c.field-meta.xml
<CustomField>
    <fullName>Esign_Order__c</fullName>
    <label>Esign Order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client First</fullName>
                <default>true</default>
                <label>Client First</label>
            </value>
            <value>
                <fullName>CTX First</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>