foundation-objs/main/default/objects/Account/fields/Esign_Partner_Status__c.field-meta.xml
<CustomField>
    <fullName>Esign_Partner_Status__c</fullName>
    <label>Esign Partner Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>