foundation-objs/main/default/objects/Account/fields/GSTIN_Details__c.field-meta.xml
<CustomField>
    <fullName>GSTIN_Details__c</fullName>
    <label>GSTIN Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>