foundation-objs/main/default/objects/Account/fields/Id_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Id_Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Id Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>IdAccountOwner</relationshipName>
    <type>Lookup</type>
</CustomField>