foundation-objs/main/default/objects/Account/fields/ID_Integration_Type__c.field-meta.xml
<CustomField>
    <fullName>ID_Integration_Type__c</fullName>
    <label>ID Integration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Not Yet Known</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>