foundation-objs/main/default/objects/Account/fields/ID_Sales_Owner__c.field-meta.xml
<CustomField>
    <fullName>ID_Sales_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ID Sales Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>IdSalesOwner</relationshipName>
    <type>Lookup</type>
</CustomField>