foundation-objs/main/default/objects/Account/fields/Is_Account_New__c.field-meta.xml
<CustomField>
    <fullName>Is_Account_New__c</fullName>
    <formula>( Asset_Ageing__c  / 30 ) &lt; 6</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Account New</label>
    <type>Checkbox</type>
</CustomField>