foundation-objs/main/default/objects/Account/fields/Is_Auto_Renewal_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Is_Auto_Renewal_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Auto Renewal Enabled?</label>
    <type>Checkbox</type>
</CustomField>