foundation-objs/main/default/objects/Account/fields/IsTestAccount__c.field-meta.xml
<CustomField>
    <fullName>IsTestAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Test Account?</label>
    <type>Checkbox</type>
</CustomField>