foundation-objs/main/default/objects/Account/fields/JSON_Store__c.field-meta.xml
<CustomField>
    <fullName>JSON_Store__c</fullName>
    <label>JSON Store</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>