foundation-objs/main/default/objects/Account/fields/KAM_Clause__c.field-meta.xml
<CustomField>
    <fullName>KAM_Clause__c</fullName>
    <label>KAM Clause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KAM Clause by ClearTax</fullName>
            </value>
            <value>
                <fullName>KAM Clause by Channel Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>