foundation-objs/main/default/objects/Account/fields/KAM_Cross_sell_priority__c.field-meta.xml
<CustomField>
    <fullName>KAM_Cross_sell_priority__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KAM Cross sell priority</label>
    <type>Checkbox</type>
</CustomField>