foundation-objs/main/default/objects/Account/fields/Master_admin_Email__c.field-meta.xml
<CustomField>
    <fullName>Master_admin_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Master admin Email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>