foundation-objs/main/default/objects/Account/fields/Master_Admin_Update_Status__c.field-meta.xml
<CustomField>
    <fullName>Master_Admin_Update_Status__c</fullName>
    <label>Master Admin Update Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>