foundation-objs/main/default/objects/Account/fields/Monthly_Throughput_Cr__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Throughput_Cr__c</fullName>
    <label>Monthly Throughput (Cr)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>