foundation-objs/main/default/objects/Account/fields/MS_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>MS_Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MS Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MS_Account</relationshipName>
    <type>Lookup</type>
</CustomField>