foundation-objs/main/default/objects/Account/fields/No_of_closed_merge_opportunities__c.field-meta.xml
<CustomField>
    <fullName>No_of_closed_merge_opportunities__c</fullName>
    <label>No of closed merge opportunities</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed - Merged</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>