foundation-objs/main/default/objects/Account/fields/Number_of_Workspace__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Workspace__c</fullName>
    <label>#Number of Workspace</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>