foundation-objs/main/default/objects/Account/fields/OTP_For_Electronic_Signature__c.field-meta.xml
<CustomField>
    <fullName>OTP_For_Electronic_Signature__c</fullName>
    <label>OTP For Electronic Signature</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>E_Sign_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>email</fullName>
                <default>true</default>
                <label>email</label>
            </value>
            <value>
                <fullName>mobile</fullName>
            </value>
            <value>
                <fullName>both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>