foundation-objs/main/default/objects/Account/fields/PAN_Details__c.field-meta.xml
<CustomField>
    <fullName>PAN_Details__c</fullName>
    <label>PAN Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>