foundation-objs/main/default/objects/Account/fields/Partner_Onboarding_Stage__c.field-meta.xml
<CustomField>
    <fullName>Partner_Onboarding_Stage__c</fullName>
    <label>Partner Onboarding Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>In Business Approval</fullName>
            </value>
            <value>
                <fullName>In Finance Approval</fullName>
            </value>
            <value>
                <fullName>In Legal Approval</fullName>
            </value>
            <value>
                <fullName>Sent For E-sign</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>