foundation-objs/main/default/objects/Account/fields/Physical_Sign_completed__c.field-meta.xml
<CustomField>
    <fullName>Physical_Sign_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Physical Sign completed?</label>
    <type>Checkbox</type>
</CustomField>