foundation-objs/main/default/objects/Account/fields/Product_Email__c.field-meta.xml
<CustomField>
    <fullName>Product_Email__c</fullName>
    <externalId>true</externalId>
    <label>Product Email</label>
    <type>Email</type>
</CustomField>