foundation-objs/main/default/objects/Account/fields/Referred_By_Customer__c.field-meta.xml
<CustomField>
    <fullName>Referred_By_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred By (Customer)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>AccountsReferred</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>