foundation-objs/main/default/objects/Account/fields/Referred_by_Email__c.field-meta.xml
<CustomField>
    <fullName>Referred_by_Email__c</fullName>
    <label>Referred by (Email)</label>
    <type>Email</type>
</CustomField>