foundation-objs/main/default/objects/Account/fields/Retrigger_E_Sign__c.field-meta.xml
<CustomField>
    <fullName>Retrigger_E_Sign__c</fullName>
    <label>Retrigger E-Sign</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resend</fullName>
            </value>
            <value>
                <fullName>Sent - Updated Automatically</fullName>
            </value>
            <value>
                <fullName>Sent Successfully - Updated Automatically</fullName>
            </value>
            <value>
                <fullName>Sent Successfully</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>