foundation-objs/main/default/objects/Account/fields/Total_Open_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Total_Open_Opportunities__c</fullName>
    <label>Total Open Opportunities</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>notEqual</operation>
        <value>Closed Lost, Closed - Merged, Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>