foundation-objs/main/default/objects/Account/fields/Type_of_ID_Product__c.field-meta.xml
<CustomField>
    <fullName>Type_of_ID_Product__c</fullName>
    <label>Type of ID Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Early Payment</fullName>
            </value>
            <value>
                <fullName>Tenor Extension</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>