foundation-objs/main/default/objects/Account/fields/Workspace_Details__c.field-meta.xml
<CustomField>
    <fullName>Workspace_Details__c</fullName>
    <label>Workspace Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>