foundation-objs/main/default/objects/Account/fields/Workspace_Master_Admin__c.field-meta.xml
<CustomField>
    <fullName>Workspace_Master_Admin__c</fullName>
    <label>Workspace Master Admin</label>
    <type>Email</type>
</CustomField>