foundation-objs/main/default/objects/Account/validationRules/Channel_partner_mandatory_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Channel_partner_mandatory_Account</fullName>
    <active>false</active>
    <errorConditionFormula>AND (Direct_deal_by_Channel_team__c == FALSE , OR( ISBLANK (Channel_Partner_Account__c),ISPICKVAL (Channel_Partner_Sales_Mode__c,&apos;&apos;),ISBLANK (Channel_Partner_Rep__c))
, Sales_Owner_Department__c == &apos;Channel Sales&apos; )</errorConditionFormula>
    <errorDisplayField>Channel_Partner_Account__c</errorDisplayField>
    <errorMessage>Please enter Channel partner details : Account, Sales mode &amp; Rep</errorMessage>
</ValidationRule>