foundation-objs/main/default/objects/Account/validationRules/CTX_Account_Owner_ChangeNotAllowed.validationRule-meta.xml
<ValidationRule>
    <fullName>CTX_Account_Owner_ChangeNotAllowed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
AND(
$Profile.Name &lt;&gt; &apos;System Administrator&apos;,
NOT( CONTAINS($Profile.Name, &apos;Head&apos;)),
NOT( CONTAINS($UserRole.Name, &apos;Head&apos;)),
NOT( CONTAINS($UserRole.Name, &apos;Finance&apos;)),
NOT( CONTAINS($Profile.Name, &apos;TL&apos;)),
NOT( CONTAINS($UserRole.Name, &apos;TL&apos;))
),
OR(
ISCHANGED(OwnerId),
ISCHANGED(Sales_Owner__c)
),
!ISNEW(),
PRIORVALUE(Sales_Owner__c) &lt;&gt; NULL 
)</errorConditionFormula>
    <errorDisplayField>Number_of_Workspace__c</errorDisplayField>
    <errorMessage>Reach out to Sales Ops for owner change</errorMessage>
</ValidationRule>