foundation-objs/main/default/objects/Account/validationRules/Product_Email_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Email_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>$User.Email &lt;&gt; &apos;ravi.teja@clear.in&apos;  &amp;&amp;
 $User.Email &lt;&gt; &apos;biswanath.dash@cleartax.in&apos; &amp;&amp;
$User.Email &lt;&gt;  &apos;impu.gk@clear.in&apos; &amp;&amp;
 $User.Email &lt;&gt; &apos;mohan.raj@cleartax.in&apos; &amp;&amp;
$User.Email &lt;&gt; &apos;ravi.shekhar@cleartax.in&apos; &amp;&amp;
$User.Email &lt;&gt; &apos;satheesh.reddy@clear.in&apos; &amp;&amp; 
Sum_of_ARR_Assets__c &gt; 0                 &amp;&amp;
 $Profile.Name &lt;&gt; &apos;System Administrator&apos; &amp;&amp;
 ISCHANGED( Product_Email__c )           &amp;&amp;
 NOT(ISBLANK(PRIORVALUE(Product_Email__c)))</errorConditionFormula>
    <errorMessage>Active Asset is present linked to the product email ID, please drop a detailed mail to team-salesforce@clear.in with account ID explaining why you want to change it. Platform team will approve and update</errorMessage>
</ValidationRule>